--- a/styles.css
+++ b/styles.css
@@ -5,31 +5,39 @@
 }
 
 body {
-    background-color: #003554 !important;/* Cambia #f0f0f0 por el color que desees */
+    width: 100%;
+    height: 100%;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #090d13 !important;
+    background-size: 100% auto;
+    background-position: top center;
+    background-repeat: no-repeat;   
 }
 
-.navbar-nav a.nav-link {
-    color: white !important; /* Color del texto */
-    position: relative; /* Para posicionar el elemento secundario de manera relativa */
-    margin-right: 50px;
-    
+.nav-item-custom {
+    position: relative; /* Para que el pseudo-elemento ::after sea relativo a este elemento */
+    display: inline-block; /* Para que el enlace ocupe solo el ancho de su contenido */
+    margin-right: 20px; /* Espacio entre enlaces */
 }
 
-.navbar-nav a.nav-link::after {
-    content: ''; /* Crea un elemento pseudo después del enlace */
-    position: absolute; /* Posiciona el elemento absolutamente */
-    left: 0; /* Coloca la barra alineada a la izquierda */
-    bottom: -2px; /* Ajusta la posición de la barra debajo del texto */
-    width: 100%; /* Ancho de la barra */
-    height: 2px; /* Altura de la barra */
-    background-color: black; /* Color de la barra */
-    visibility: hidden; /* Oculta inicialmente la barra */
-    transition: visibility 0s, width 0.3s; /* Transición suave */
+.nav-item-custom::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 0;
+    height: 2px;
+    background-color:black;
+    visibility: hidden;
+    transition: visibility 0s, width 0.3s;
 }
 
-.navbar-nav a.nav-link:hover::after {
-    visibility: visible; /* Muestra la barra cuando el enlace es hoveado */
-    width: 100%; /* Ancho completo cuando el enlace es hoveado */
+.nav-item-custom:hover::after {
+    visibility: visible;
+    width: 100%;
 }
 .navbar-brand{
     color: black
@@ -38,65 +46,123 @@ body {
 /* Estilo para ajustar tamaño de la imagen del carousel */
 .carousel-item img {
     max-width: 100%; /* Ancho máximo de la imagen */
-    max-height: 600px; /* Altura máxima de la imagen */
+    max-height: 1200px; /* Altura máxima de la imagen */
     margin: auto; /* Centra la imagen horizontalmente */
-    border-radius: 10px;
-  }
+    border-radius: 10px; /* Borde redondeado */
+    image-rendering: auto; /* Ajusta la calidad de renderizado de la imagen */
+}
 
 /* Estilo para hacer transparente el fondo de los botones de control */
-    .carousel-control-prev, .carousel-control-next {
-        background-color: transparent; /* Hace el fondo transparente */
-        border: none; /* Elimina el borde */
-        width: 100%; /* Ajusta el ancho de las flechas */
-    }
+/* Estilo para las flechas del carousel */
+.carousel-control-prev, .carousel-control-next {
+    font-size: 5rem; /* Ajusta el tamaño de la flecha */
+    padding: 20px; /* Añade espacio alrededor de la flecha para hacerla clickeable */
+    pointer-events: auto; /* Activa la interacción del mouse en las flechas */  
+}
 
 /* Estilo para el contenedor del carrusel */
 #carouselExampleCaptions {
-    width: 90%; /* Aumentar el ancho del contenedor */
-    margin-top: 200px; /* Margen superior */
+    width: 100%; /* Aumentar el ancho del contenedor */
+    height: auto;
+
     margin-bottom: 20px; /* Margen inferior */
-    margin-right: auto;
-    margin-left: auto;
  
-    border: 3px solid #ddd; /* Borde delgado */
-    padding: 0; /* Elimina cualquier relleno interno */
     border-radius: 10px;
   }
+
+  .carousel-indicators button {
+    margin-top: -30px; /* Ajusta la posición vertical */
+    width: 20px; /* Ancho del botón */
+    height: 20px; /* Altura del botón */
+    padding: 0;
+    pointer-events: relative; /* Desactiva la interacción del mouse en el botón */
+}
 
 .carousel-indicators button {
     margin-top: -30px; /* Ajusta la posición vertical */
     width: 20px; /* Ancho del botón */
     height: 20px; /* Altura del botón */
+    padding: 0;
+    position: relative; /* Establece la posición relativa */
 }
 
-.carousel-indicators [data-bs-target] {
-    box-sizing: content-box;
-    flex: 0 1 auto;
-    width: 30px;
-    height: 3px;
-    padding: 0;
-    margin-right: 3px;
-    margin-left: 3px;
-    text-indent: -999px;
-    cursor: pointer;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 0;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    opacity: .5;
-    transition: opacity .6s ease;
+.carousel-indicators button::before,
+.carousel-indicators button::after {
+    content: ''; /* Crea los pseudo-elementos */
+    position: absolute; /* Establece la posición absoluta */
+    top: 0; /* Posiciona los pseudo-elementos en la parte superior */
+    bottom: 0; /* Posiciona los pseudo-elementos en la parte inferior */
+    width: 50%; /* Ancho de cada flecha */
+    background: transparent; /* Fondo transparente */
+}
+
+.carousel-indicators button::before {
+    left: 0; /* Posiciona la primera flecha a la izquierda */
+}
+
+.carousel-indicators button::after {
+    right: 0; /* Posiciona la segunda flecha a la derecha */
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    pointer-events: auto; /* Activa la interacción del mouse en las flechas */
 }
 
 #navsuperior {
+    font-size: 12px;
+    font-family: "Stratum2", sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
+    opacity: 1;
+    margin: 0px 0px;
+    padding: 3px 20px;
+    text-transform: uppercase;
+    background-color: black !important;
+    color: white;
+    z-index: 2;
+    
+
+}
+.navbar-nav a.nav-link {
     color: white !important; /* Color del texto */
-    background-color: #032030 !important;
-    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+#navinferior .navbar-nav .nav-link {
+    font-size: 24px; /* Tamaño de la fuente */
+    padding: 12px 24px; /* Ajusta el espaciado interno */
+}
+
+#navinferior .navbar-nav .nav-link::before {
+    content: ''; /* Crea un elemento pseudo */
+    position: absolute; /* Establece la posición absoluta */
+    bottom: 0; /* Lo sitúa al fondo del contenedor */
+    left: 25%; /* Lo sitúa a la mitad horizontalmente */
+    width: 50%; /* Establece el ancho del borde al 50% del contenedor */
+    height: 2px; /* Altura del borde */
+    background-color: black; /* Color del borde */
+    transition: width 0.3s, left 0.3s; /* Transición para el cambio de ancho y posición */
+}
+
+#navinferior .navbar-nav .nav-link:hover::before {
+    width: 50%; /* Aumenta el ancho del borde al 100% al hacer hover */
+    left: 0; /* Centra el borde horizontalmente al hacer hover */
 }
 
 #navinferior {
-    background-color: #022B42 !important;
-    font-family: 'Courier New', Courier, monospace;
+    background-color: rgba(134, 134, 134, 0.5) !important; 
+    font-family: "Stratum2",sans-serif;
+    font-size: 12px;
+    font-family: "Stratum2", sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
+    opacity: 1;
+    margin: 0px 0px;
+    padding: 3px 20px;
+    text-transform: uppercase;
+    color: white;
+    z-index: 1;
 }
 
 .row {
@@ -121,4 +187,41 @@ body {
     margin-left: auto; /* Centra la línea horizontalmente */
     margin-right: auto; /* Centra la línea horizontalmente */
     border-radius: 10px;
+}
+
+
+.carousel-caption h5 {  
+    font-size: 46px; /* Tamaño de la fuente para el título */
+    font-weight: bold;
+    
+}
+
+.carousel-caption p {
+    font-size: 26px; /* Tamaño de la fuente para la descripción */
+}
+
+.descr h2 {  
+    font-size: 46px; /* Tamaño de la fuente para el título */
+    font-weight: bold;
+    color: #fff;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    
+    
+}
+
+.descr p {
+    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    color: rgba(255, 255, 255, .7);
+    
+}
+
+.float-end{
+    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    color: rgba(255, 255, 255, .7);
+}
+
+.inc {
+    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    color: rgba(255, 255, 255, .7);
 }
