--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-*{
+/* Estilos generales */
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -11,160 +12,332 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #090d13 !important;
+    background-color: #022b42 !important;
     background-size: 100% auto;
     background-position: top center;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
 }
 
-.nav-item-custom {
-    position: relative; /* Para que el pseudo-elemento ::after sea relativo a este elemento */
-    display: inline-block; /* Para que el enlace ocupe solo el ancho de su contenido */
-    margin-right: 20px; /* Espacio entre enlaces */
+/* Estilos para el navbar superior */
+.navbar {
+    opacity: 1;
+    margin: 0x 0px;
+    padding: 3px 20px;
+    text-transform: uppercase;
+    background-color: #004d74 !important;
+    max-height: 60px;
+    /* Establece un ancho máximo para el navbar */
 }
 
-.nav-item-custom::after {
+/* Estilos para los enlaces del navbar */
+.navbar-nav .nav-link {
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    letter-spacing: 2px;
+    font-size: 18px;
+    color: #fff;
+    /* Cambiado a color blanco */
+    position: relative;
+    text-decoration: none;
+    margin-right: 50px;
+    /* Aumenta el margen derecho entre los botones */
+    transition: transform 0.3s;
+    /* Agrega una transición para el efecto de agrandar las letras */
+}
+
+/* Estilos para los enlaces del navbar login */
+.navbar-login {
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    letter-spacing: 2px;
+    font-size: 18px;
+    color: #fff;
+    /* Cambiado a color blanco */
+    position: relative;
+    text-decoration: none;
+    margin-right: 30px;
+    /* Aumenta el margen derecho entre los botones */
+    transition: transform 0.3s;
+    /* Agrega una transición para el efecto de agrandar las letras */
+}
+
+/* Estilos para la línea debajo del enlace al pasar el mouse */
+.navbar-nav .nav-link::after {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 0px;
+    bottom: -2px;
     width: 0;
     height: 2px;
-    background-color:black;
-    visibility: hidden;
-    transition: visibility 0s, width 0.3s;
+    background-color: black;
+    transition: width 0.3s;
 }
 
-.nav-item-custom:hover::after {
-    visibility: visible;
+/* Estilos para agrandar las letras del botón seleccionado */
+.navbar-nav .nav-link:hover {
+    transform: scale(1.3);
+    /* Aumenta la escala del texto */
+    color: #fff;
+    /* Mantenemos el color del texto blanco cuando se pasa el mouse sobre el botón */
+}
+
+/* Estilos para la línea debajo del enlace al pasar el mouse */
+.navbar-nav .nav-link:hover::after {
     width: 100%;
 }
-.navbar-brand{
-    color: black
+
+/* Estilos para el botón seleccionado */
+.navbar-nav .nav-link.active {
+    color: #fff;
+    /* Mantenemos el color del texto blanco cuando el botón está seleccionado */
 }
 
-/* Estilo para ajustar tamaño de la imagen del carousel */
+/* Estilos para los enlaces Login y Register */
+.navbar-login .nav-login-link {
+    font-weight: 600;
+    font-size: 12px;
+    /* Reducimos el tamaño de la fuente */
+    color: #fff;
+    /* Cambiamos el color a blanco */
+    margin-right: 10px;
+    /* Ajustamos el margen derecho */
+    transition: transform 0.3s;
+    /* Agregamos una transición para el efecto de zoom */
+    text-decoration: none;
+    /* Eliminamos el subrayado */
+}
+
+.navbar-brand img {
+    max-height: 60px;
+    /* Establece una altura máxima para la imagen */
+    max-width: 150px;
+    /* Establece un ancho máximo para la imagen */
+    object-fit: contain;
+    /* Escala la imagen para que quepa dentro del contenedor sin distorsionarla */
+    padding-left: 20px;
+}
+
+/* Estilos para el navbar colapsado */
+@media (max-width: 991.98px) {
+
+    .navbar-collapse {
+    position: absolute;
+    background-color: #004d74;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    align-items: center;
+    border-top: 5px solid; /* Línea inicialmente transparente */
+    transition: border-width 0.3s/* Agrega transición */
+}
+
+.navbar-collapse.show {
+    border-top-color: black; /* Cambia el color de la línea al blanco */
+    border-top-width: 5px; /* Asegura que la línea tenga una anchura */
+}
+
+
+
+    /* Estilos para el navbar superior */
+    .navbar {
+        opacity: 1;
+        margin: 0;
+        padding: 3px 20px;
+        text-transform: uppercase;
+        background-color: #004d74 !important;
+        max-height: 60px;
+        /* Establece un ancho máximo para el navbar */
+        display: flex;
+        /* Alinear elementos horizontalmente */
+        justify-content: space-between;
+        /* Distribuir elementos uniformemente */
+        align-items: center;
+        /* Alinear elementos verticalmente */
+        padding-top: 20px;
+        /* Ajuste para compensar el espacio adicional */
+    }
+    .navbar-nav {
+        padding: 0%;
+        text-align: center; /* Alinea los elementos al centro */
+    }
+
+    .navbar-brand img {
+        height: 40px;
+        /* Establece una altura máxima para la imagen */
+        max-width: 150px;
+        /* Establece un ancho máximo para la imagen */
+        object-fit: cover;
+        /* Escala la imagen para que quepa dentro del contenedor sin distorsionarla */
+        padding-left: 20px;
+    }
+
+    /* Estilos para los enlaces Login y Register */
+    .navbar-login {
+        font-weight: 600;
+        font-size: 12px;
+        /* Reducir el tamaño de la fuente */
+        color: #fff;
+        /* Cambiar el color a blanco */
+        margin-right: 10px;
+        /* Ajustar el margen derecho */
+        transition: transform 0.3s;
+        /* Agregar una transición para el efecto de zoom */
+        text-decoration: none;
+        /* Eliminar el subrayado */
+        padding: 5px 10px;
+        /* Añadir un padding para dar espacio alrededor del texto */
+        border: 2px solid transparent;
+        /* Establecer un borde transparente */
+        border-radius: 5px;
+        /* Añadir esquinas redondeadas */
+    }
+
+    /* Estilos para el botón de desplegar enlaces */
+.navbar-toggler {
+    width: 145px !important; /* Aumenta el ancho máximo del botón */
+    padding: 8px 16px; /* Ajusta el espacio interno del botón */
+    border-radius: 8px; /* Hace los bordes más marcados */
+    color: #004d74 !important; /* Cambia el color del texto del botón */
+    border: 2px solid black!important; /* Establece un borde sólido */
+}
+
+/* Estilos para el icono del botón de desplegar enlaces */
+.navbar-toggler-icon {
+    background-image: url('flecha-abajo.png'); /* Icono de flecha hacia abajo */
+    width: 20px; /* Ajusta el tamaño según tus necesidades */
+    height: 20px;
+}
+
+.navbar-toggler.collapsed .navbar-toggler-icon {
+    background-image: url('flecha-arriba.png'); /* Icono de flecha hacia arriba */
+}
+
+    /* Estilos para los enlaces del navbar */
+    .navbar-nav .nav-link {
+        /* Añade un borde blanco a los botones */
+        padding: 10px 10px;
+        /* Añade espacio alrededor del texto en los botones */
+        border-radius: 5px;
+        /* Añade esquinas redondeadas a los botones */
+        display: block;
+        /* Muestra los botones como bloques para que ocupen todo el ancho disponible */
+        color: white;
+        /* Cambia el color del texto a blanco */
+        text-decoration: none;
+        /* Elimina el subrayado */
+        text-align: center;
+        /* Centra el texto dentro de los botones */
+        transition: background-color 0.3s, border-color 0.3s;
+        /* Agrega una transición suave al color de fondo y al borde */
+    }
+
+    /*carosel */
+    .carousel {
+            z-index: 1;
+        margin-top: calc(100px + 20px);
+        /* Ajusta según la altura de tu encabezado y el espacio adicional */
+        margin-left: 300px;
+        margin-right: 300px;
+        max-height: 700px;
+    }
+}
+
+
+.navbar-brand {
+    margin-right: auto;
+    /* Empuja el logotipo a la izquierda */
+}
+
+.navbar-nav .nav-link {
+    margin-right: 30px;
+    /* Elimina el margen derecho para los enlaces */
+    margin-bottom: 10px;
+    /* Agrega un margen inferior entre los enlaces */
+}
+
+
+
+.navbar-nav .nav-login-link {
+    font-weight: 600;
+    font-size: 12px;
+    color: #fff;
+    margin-right: 10px;
+    transition: transform 0.3s;
+    /* Agregamos una transición para el efecto de zoom */
+    text-decoration: none;
+    padding: 5px 10px;
+    /* Añadimos un padding para dar espacio alrededor del texto */
+    border: 2px solid transparent;
+    /* Establecemos un borde transparente */
+    border-radius: 5px;
+}
+
+/* Estilos para el botón Login y Register cuando el mouse está encima */
+.navbar-nav .nav-login-link:hover {
+    border-color: #fff;
+    /* Cambiamos el color del borde al pasar el mouse por encima */
+}
+
+/* Estilos para el carrusel */
 .carousel-item img {
-    max-width: 100%; /* Ancho máximo de la imagen */
-    max-height: 1200px; /* Altura máxima de la imagen */
-    margin: auto; /* Centra la imagen horizontalmente */
-    border-radius: 10px; /* Borde redondeado */
-    image-rendering: auto; /* Ajusta la calidad de renderizado de la imagen */
-}
-
-/* Estilo para hacer transparente el fondo de los botones de control */
-/* Estilo para las flechas del carousel */
-.carousel-control-prev, .carousel-control-next {
-    font-size: 5rem; /* Ajusta el tamaño de la flecha */
-    padding: 20px; /* Añade espacio alrededor de la flecha para hacerla clickeable */
-    pointer-events: auto; /* Activa la interacción del mouse en las flechas */  
-}
-
-/* Estilo para el contenedor del carrusel */
-#carouselExampleCaptions {
-    width: 100%; /* Aumentar el ancho del contenedor */
+    width: 100%;
     height: auto;
+    object-fit: cover; /* Escala las imágenes para que cubran el área del carousel */
+    transition: none; /* Desactiva las transiciones en las imágenes */
 
-    margin-bottom: 20px; /* Margen inferior */
- 
-    border-radius: 10px;
-  }
-
-  .carousel-indicators button {
-    margin-top: -30px; /* Ajusta la posición vertical */
-    width: 20px; /* Ancho del botón */
-    height: 20px; /* Altura del botón */
-    padding: 0;
-    pointer-events: relative; /* Desactiva la interacción del mouse en el botón */
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+    font-size: 5rem;
+    padding: 20px;
+    pointer-events: auto;
+}
+
+/*carosel */
+.carousel {
+    margin-top: calc(100px + 20px);
+    /* Ajusta según la altura de tu encabezado y el espacio adicional */
+    margin-left: 300px;
+    margin-right: 300px;
+    image-resolution: 1280-190;
+}
+
+/* Estilos para los botones de control del carrusel */
 .carousel-indicators button {
-    margin-top: -30px; /* Ajusta la posición vertical */
-    width: 20px; /* Ancho del botón */
-    height: 20px; /* Altura del botón */
+    margin-top: -30px;
+    width: 20px;
+    height: 20px;
     padding: 0;
-    position: relative; /* Establece la posición relativa */
+    pointer-events: relative;
 }
 
+/* Estilos para las flechas del carrusel */
 .carousel-indicators button::before,
 .carousel-indicators button::after {
-    content: ''; /* Crea los pseudo-elementos */
-    position: absolute; /* Establece la posición absoluta */
-    top: 0; /* Posiciona los pseudo-elementos en la parte superior */
-    bottom: 0; /* Posiciona los pseudo-elementos en la parte inferior */
-    width: 50%; /* Ancho de cada flecha */
-    background: transparent; /* Fondo transparente */
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    background: transparent;
 }
 
 .carousel-indicators button::before {
-    left: 0; /* Posiciona la primera flecha a la izquierda */
+    left: 0;
 }
 
 .carousel-indicators button::after {
-    right: 0; /* Posiciona la segunda flecha a la derecha */
+    right: 0;
 }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    pointer-events: auto; /* Activa la interacción del mouse en las flechas */
+    pointer-events: auto;
 }
 
-#navsuperior {
-    font-size: 12px;
-    font-family: "Stratum2", sans-serif;
-    font-weight: 700;
-    letter-spacing: 2px;
-    opacity: 1;
-    margin: 0px 0px;
-    padding: 3px 20px;
-    text-transform: uppercase;
-    background-color: black !important;
-    color: white;
-    z-index: 2;
-    
-
-}
-.navbar-nav a.nav-link {
-    color: white !important; /* Color del texto */
-    
-}
-
-#navinferior .navbar-nav .nav-link {
-    font-size: 24px; /* Tamaño de la fuente */
-    padding: 12px 24px; /* Ajusta el espaciado interno */
-}
-
-#navinferior .navbar-nav .nav-link::before {
-    content: ''; /* Crea un elemento pseudo */
-    position: absolute; /* Establece la posición absoluta */
-    bottom: 0; /* Lo sitúa al fondo del contenedor */
-    left: 25%; /* Lo sitúa a la mitad horizontalmente */
-    width: 50%; /* Establece el ancho del borde al 50% del contenedor */
-    height: 2px; /* Altura del borde */
-    background-color: black; /* Color del borde */
-    transition: width 0.3s, left 0.3s; /* Transición para el cambio de ancho y posición */
-}
-
-#navinferior .navbar-nav .nav-link:hover::before {
-    width: 50%; /* Aumenta el ancho del borde al 100% al hacer hover */
-    left: 0; /* Centra el borde horizontalmente al hacer hover */
-}
-
-#navinferior {
-    background-color: rgba(134, 134, 134, 0.5) !important; 
-    font-family: "Stratum2",sans-serif;
-    font-size: 12px;
-    font-family: "Stratum2", sans-serif;
-    font-weight: 700;
-    letter-spacing: 2px;
-    opacity: 1;
-    margin: 0px 0px;
-    padding: 3px 20px;
-    text-transform: uppercase;
-    color: white;
-    z-index: 1;
-}
-
+/* Estilos adicionales */
 .row {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
@@ -173,55 +346,45 @@ body {
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
-    align-items: center; /* Alineación vertical */
-    justify-content: center; /* Alineación horizontal */
+    align-items: center;
+    justify-content: center;
 }
-
 
 .featurette-divider {
     margin: 5rem 0;
-    border: none; /* Elimina el borde */
-    border-top: 5px solid #006494; /* Define el grosor y color de la línea */
+    border: none;
+    border-top: 5px solid #006494;
     opacity: 0.55;
-    width: 80%; /* Ancho deseado */
-    margin-left: auto; /* Centra la línea horizontalmente */
-    margin-right: auto; /* Centra la línea horizontalmente */
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
 }
 
-
-.carousel-caption h5 {  
-    font-size: 46px; /* Tamaño de la fuente para el título */
+.carousel-caption h5 {
+    font-size: 46px;
     font-weight: bold;
-    
 }
 
 .carousel-caption p {
-    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    font-size: 26px;
 }
 
-.descr h2 {  
-    font-size: 46px; /* Tamaño de la fuente para el título */
+.descr h2 {
+    font-size: 46px;
     font-weight: bold;
     color: #fff;
     margin-left: 30px;
     margin-bottom: 20px;
-    
-    
 }
 
 .descr p {
-    font-size: 26px; /* Tamaño de la fuente para la descripción */
-    color: rgba(255, 255, 255, .7);
-    
-}
-
-.float-end{
-    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    font-size: 26px;
     color: rgba(255, 255, 255, .7);
 }
 
+.float-end,
 .inc {
-    font-size: 26px; /* Tamaño de la fuente para la descripción */
+    font-size: 26px;
     color: rgba(255, 255, 255, .7);
 }
