--- a/styles-pistolas.css
+++ b/styles-pistolas.css
@@ -1,6 +1,10 @@
-.tarjetas {
-    padding-top: 125px;
-}
+/* Estilos generales */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}   
+
 /* Estilos para las tarjetas de producto */
 .card {
     margin-top: 100px;
@@ -8,14 +12,18 @@
     
 }   
 
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+    flex-grow: 1;
+}
 .card-header {
     background-color: #004d74; /* Color del navbar */
     color: #fff; /* Color del texto */
-}
+}   
+
 @media (min-width: 768px) {
     .col {
-        width: 300px; /* Ancho mínimo de las columnas en dispositivos de tamaño medio */
-        width: 100px; /* Elimina el ancho máximo para permitir que las columnas se expandan */
         margin-right: 20px; /* Espacio entre las tarjetas */
         margin-left: 20px; /* Espacio entre las tarjetas */
     }
@@ -29,9 +37,10 @@
 
 .product-image {
     height: 200px; /* Ajusta la altura de la imagen del producto */
-    background-size: cover;
-    background-position: center;
+    background-size: contain; /* La imagen de fondo se ajusta para caber dentro del contenedor */
+    background-position: center; /* La imagen de fondo se posiciona en el centro */
     margin-bottom: 15px; /* Añade un espacio entre la imagen y el contenido */
+    background-repeat: no-repeat;
 }
 
 .card-title {
@@ -64,6 +73,9 @@
     background-color: rgba(0, 0, 0, 0.2); /* Fondo semi-transparente */
 }
 main {
-    display: block;
-    unicode-bidi: isolate;
+    width: 100%; /* Ocupa todo el ancho disponible */
+    max-width: none; /* Elimina el ancho máximo */
+    margin-left: 0; /* Elimina el margen izquierdo */
+    margin-right: 0; /* Elimina el margen derecho */
 }
+    
