--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,19 @@ body {
 /* Estilos para el navbar superior */
 .navbar {
     opacity: 1;
-    margin: 0x 0px;
+    margin: 0px 0px;
     padding: 3px 20px;
     text-transform: uppercase;
     background-color: #004d74 !important;
     max-height: 60px;
     /* Establece un ancho máximo para el navbar */
 }
-
+main {
+    width: 100%; /* Ocupa todo el ancho disponible */
+    max-width: none; /* Elimina el ancho máximo */
+    margin-left: 0; /* Elimina el margen izquierdo */
+    margin-right: 0; /* Elimina el margen derecho */
+}
 /* Estilos para los enlaces del navbar */
 .navbar-nav .nav-link {
     font-weight: bold;
