--- a/styles-carrito.css
+++ b/styles-carrito.css
@@ -1,5 +1,3 @@
-/* Estilos generales */
-
 body {
     width: 100%;
     height: 100%;
@@ -12,12 +10,8 @@ body {
     margin: 0;
     padding: 0;
 }
-
-
-
-main {
+main{
     width: 100%;
-    /* Ocupa todo el ancho disponible */
 }
 
 html {
@@ -25,12 +19,167 @@ html {
     scroll-behavior: smooth;
 }
 
-/* Estilos para agrandar las letras del botón seleccionado 
-.navbar-nav .nav-link:hover {
-    transform: scale(1.3);
-    /* Aumenta la escala del texto */
-/*color: #573b8a;
-    /* Mantenemos el color del texto blanco cuando se pasa el mouse sobre el botón */
+.title {
+    margin-bottom: 5vh;
+}
+
+.card {
+    margin-top: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px; /* Establece el límite máximo de ancho */
+    width: 100%; /* Permite que el ancho se ajuste dinámicamente */
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 1rem;
+    border: transparent;
+}
+
+.cart {
+    background-color: #fff;
+    padding: 4vh 5vh;
+    border-bottom-left-radius: 1rem;
+    border-top-left-radius: 1rem;
+}
+
+.summary {
+    background-color: #ddd;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    padding: 4vh;
+    color: rgb(65, 65, 65);
+}
+
+.summary .col-2,
+.summary .col-10 {
+    padding: 0;
+}
+
+@media(max-width:767px) {
+    .card {
+        margin-left: 5vh; /* Margen izquierdo pequeño */
+        margin-right: 5vh !important; /* Margen derecho pequeño */
+        width: auto;
+        margin-bottom: 50px;
+    }
+
+    .cart {
+        padding: 2vh; /* Ajusta el relleno interno */
+        border-radius: 10px;
+    }
+
+    .summary {
+        border-radius: 10px;
+    }
+}
+
+.row {
+    margin: 0;
+    max-width: 1200px;
+}
+
+.title b {
+    font-size: 1.5rem;
+}
+
+.col-2,
+.col {
+    padding: 0 1vh;
+    margin-left: 10px;
+}
+
+a {
+    padding: 0 1vh;
+}
+
+.close {
+    margin-left: auto;
+    font-size: 0.7rem;
+}
+
+img {
+    width: 3.5rem;
+}
+
+
+
+.text-muted{
+    color: white !important;
+    --bs-text-opacity: initial !important;
+}
+
+h5 {
+    margin-top: 4vh;
+}
+
+hr {
+    margin-top: 1.25rem;
+}
+
+form {
+    padding: 2vh 0;
+}
+
+select {
+    border: 1px solid rgba(0, 0, 0, 0.137);
+    padding: 1.5vh 1vh;
+    margin-bottom: 4vh;
+    outline: none;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+}
+
+input {
+    border: 1px solid rgba(0, 0, 0, 0.137);
+    padding: 1vh;
+    margin-bottom: 4vh;
+    outline: none;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+}
+
+input:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+.boton-pagar {
+    margin-top: 4.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em 3.1em;
+    border: none;
+    border-radius: 7px;
+    font-size: 0.8em;
+    font-weight: 700;
+    letter-spacing: 1.3px;
+    color: #fff;
+    background-color: black;
+    box-shadow: 2px 2px 25px -7px black;
+    cursor: pointer;
+    display: block;
+}
+
+.btn:focus {
+    box-shadow: none;
+    outline: none;
+    box-shadow: none;
+    color: white;
+    -webkit-box-shadow: none;
+    -webkit-user-select: none;
+    transition: none;
+}
+
+.btn:hover {
+    color: white;
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
 
 /********************NAVARR**********************/
 
@@ -211,120 +360,4 @@ img {
 .navbar-nav .nav-login-link:hover {
     border-color: #fff;
     /* Cambiamos el color del borde al pasar el mouse por encima */
-}
-
-
-
-
-
-/* Estilos para el carrusel */
-.carousel-item img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    /* Escala las imágenes para que cubran el área del carousel */
-    transition: none;
-    /* Desactiva las transiciones en las imágenes */
-
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-    font-size: 5rem;
-    padding: 20px;
-    pointer-events: auto;
-}
-
-/*carosel */
-.carousel {
-    margin-top: calc(100px + 20px);
-    /* Ajusta según la altura de tu encabezado y el espacio adicional */
-    margin-left: 300px;
-    margin-right: 300px;
-    image-resolution: 1280-190;
-}
-
-/* Estilos para los botones de control del carrusel */
-.carousel-indicators button {
-    margin-top: -30px;
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    pointer-events: relative;
-}
-
-/* Estilos para las flechas del carrusel */
-.carousel-indicators button::before,
-.carousel-indicators button::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 50%;
-    background: transparent;
-}
-
-.carousel-indicators button::before {
-    left: 0;
-}
-
-.carousel-indicators button::after {
-    right: 0;
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-    pointer-events: auto;
-}
-
-/* Estilos adicionales */
-.row {
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    align-items: center;
-    justify-content: center;
-}
-
-.featurette-divider {
-    margin: 5rem 0;
-    border: none;
-    border-top: 5px solid #ede0d4;
-    opacity: 0.55;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-}
-
-.carousel-caption h5 {
-    font-size: 46px;
-    font-weight: bold;
-}
-
-.carousel-caption p {
-    font-size: 26px;
-}
-
-.descr h2 {
-    font-size: 46px;
-    font-weight: bold;
-    color: #fff;
-    margin-left: 30px;
-    margin-bottom: 20px;
-}
-
-.descr p {
-    font-size: 26px;
-    color: rgba(255, 255, 255, .7);
-}
-
-.float-end,
-.inc {
-    font-size: 26px;
-    color: rgba(255, 255, 255, .7);
 }
