--- a/stylesproduct.css
+++ b/stylesproduct.css
@@ -154,113 +154,77 @@ footer a:hover {
     color: black;
 }
 
+/********************NAVARR**********************/
+
 .navbar-container {
     max-height: 60px;
     margin: 0;
     padding: 0;
-    /* Estilos para el navbar superior */
-    .navbar {
-        opacity: 1;
-        margin: 0;
-        padding: 0px 20px;
-        text-transform: uppercase;
-        background-color: #ede0d4 !important;
-        max-height: 60px;
-        /* Establece un ancho máximo para el navbar */
-        display: flex;
-        /* Alinear elementos horizontalmente */
-        justify-content: space-between;
-        /* Distribuir elementos uniformemente */
-        align-items: center;
-        /* Alinear elementos verticalmente */
-    }
-    .navbar-nav .nav-link {
-        font-weight: bold;
-        font-family: 'Courier New', Courier, monospace;
-        letter-spacing: 2px;
-        font-size: 18px;
-        color: #573b8a;
-        /* Cambiado a color blanco */
-        position: relative;
-        text-decoration: none;
-        margin-right: 50px;
-        /* Aumenta el margen derecho entre los botones */
-        transition: transform 0.3s;
-        /* Agrega una transición para el efecto de agrandar las letras */
-    }
+}   
 
-    .navbar-nav {
-        padding: 0%;
-        text-align: center; /* Alinea los elementos al centro */
-        display: flex; /* Alinea los elementos horizontalmente */
-        justify-content: center; /* Centra los elementos horizontalmente */
-        align-items: center; /* Centra los elementos verticalmente */
-    }
+.navbar {
+    width: 100%;
+    opacity: 1;
+    margin: 0;
+    padding: 0px 20px;
+    text-transform: uppercase;
+    background-color: #ede0d4 !important;
+    max-height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    .navbar-nav .nav-item {
-        margin-right: 20px; /* Espacio entre los elementos */
-    }
+img {
+    width: 3.5rem;
+}
 
-    .navbar-brand img {
-        height: 40px;
-        /* Establece una altura máxima para la imagen */
-        max-width: 150px;
-        /* Establece un ancho máximo para la imagen */
-        object-fit: cover;
-        /* Escala la imagen para que quepa dentro del contenedor sin distorsionarla */
-        padding-left: 20px;
-    }
+.navbar-nav .nav-link {
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    letter-spacing: 1px;
+    font-size: 14px; /* Reducimos el tamaño del texto */
+    color: #573b8a;
+    position: relative;
+    text-decoration: none;
+    margin-right: 20px;
+    transition: transform 0.3s;
+}
 
-    /* Estilos para los enlaces Login y Register */
-    .navbar-login {
-        font-weight: bold;
-        font-family: 'Courier New', Courier, monospace;
-        letter-spacing: 2px;
-        font-size: 18px;
-        color: #573b8a;
-        /* Cambiado a color blanco */
-        position: relative;
-        text-decoration: none;
-        margin-right: 30px;
-        /* Aumenta el margen derecho entre los botones */
-        transition: transform 0.3s;
-        /* Agrega una transición para el efecto de agrandar las letras */
-    }
-    .navbar-nav .nav-link::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px;
-        width: 0;
-        height: 2px;
-        background-color: #573b8a;
-        transition: width 0.3s;
-    }
-    .navbar-nav .nav-link:hover {
-        transform: scale(1.5);
-        /* Aumenta la escala del texto */
-        color: #573b8a;
-        transition: transform 0.3s;
-        /* Mantenemos el color del texto blanco cuando se pasa el mouse sobre el botón */
-    }
-    .navbar-nav .nav-link:hover::after {
-        width: 100%;
-    }
-    .navbar-login .nav-login-link {
-        font-weight: 800;
-        font-size: 12px;
-        /* Reducimos el tamaño de la fuente */
-        color: #573b8a;
-        /* Cambiamos el color a blanco */
-        margin-right: 10px;
-        /* Ajustamos el margen derecho */
-        transition: transform 0.3s;
-        /* Agregamos una transición para el efecto de zoom */
-        text-decoration: none;
-        /* Eliminamos el subrayado */
-    }
+.navbar-nav {
+    padding: 0%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.extrabuttons{
+    display: flex;
+    margin-right: 35px;
+}
+.extrabuttons a {
+    margin-right: 10px; /* Ajusta el margen entre los iconos */
+}
+.navbar-login {
+    min-width: fit-content;
+    background-color: #573b8a;
+    font-weight: 600;
+    font-size: 12px;
+    color: #fff;
+    margin-right: 10px;
+    transition: transform 0.3s;
+    text-decoration: none;
+    padding: 5px 10px;
+    border: 2px solid transparent;
+    border-radius: 5px;
 
-    /* Estilos para el navbar colapsado */
+}
+
+.nav-login-link {
+    text-decoration: none;
+    color: white;
+}
+
 @media (max-width: 991.98px) {
     .navbar-collapse {
         position: absolute;
@@ -270,8 +234,8 @@ footer a:hover {
         width: 100%;
         z-index: 999;
         align-items: center;
-        border-top: 5px solid; /* Línea inicialmente transparente */
-        transition: border-width 0.3s/* Agrega transición */
+        border-top: 5px solid;
+        transition: border-width 0.3s;
     }
 
     .navbar {
@@ -279,109 +243,43 @@ footer a:hover {
         height: 100%;
         width: 100%;
         opacity: 1;
-        margin: 0;
+        margin-top: -15px;
         padding: 3px 20px;
         text-transform: uppercase;
         background-color: #ede0d4 !important;
         max-height: 60px;
-        /* Establece un ancho máximo para el navbar */
         display: flex;
-        /* Alinear elementos horizontalmente */
         justify-content: space-between;
-        /* Distribuir elementos uniformemente */
         align-items: center;
-        /* Alinear elementos verticalmente */
     }
+    
+
     .navbar-nav {
         padding: 0%;
-        text-align: center; /* Alinea los elementos al centro */
+        text-align: center;
     }
 
-    .navbar-brand img {
-        height: 40px;
-        /* Establece una altura máxima para la imagen */
-        max-width: 150px;
-        /* Establece un ancho máximo para la imagen */
-        object-fit: cover;
-        /* Escala la imagen para que quepa dentro del contenedor sin distorsionarla */
-        padding-left: 20px;
-    }
-
-    /* Estilos para los enlaces Login y Register */
     .navbar-login {
+        min-width: fit-content;
+        background-color: #573b8a;
         font-weight: 600;
         font-size: 12px;
-        /* Reducir el tamaño de la fuente */
         color: #fff;
-        /* Cambiar el color a blanco */
         margin-right: 10px;
-        /* Ajustar el margen derecho */
         transition: transform 0.3s;
-        /* Agregar una transición para el efecto de zoom */
         text-decoration: none;
-        /* Eliminar el subrayado */
         padding: 5px 10px;
-        /* Añadir un padding para dar espacio alrededor del texto */
         border: 2px solid transparent;
-        /* Establecer un borde transparente */
         border-radius: 5px;
-        /* Añadir esquinas redondeadas */
+    
     }
 
-    .navbar-toggler {
-        width: 145px !important; /* Aumenta el ancho máximo del botón */
-        padding: 8px 16px; /* Ajusta el espacio interno del botón */
-        border-radius: 8px; /* Hace los bordes más marcados */
-        color: #ede0d4 !important; /* Cambia el color del texto del botón */
-        border: 2px solid black!important; /* Establece un borde sólido */
-    }
-    
-    /* Estilos para el icono del botón de desplegar enlaces */
-    .navbar-toggler-icon {
-        background-image: url('flecha-abajo.png'); /* Icono de flecha hacia abajo */
-        width: 20px; /* Ajusta el tamaño según tus necesidades */
-        height: 20px;
-    }
-    
-    .navbar-toggler.collapsed .navbar-toggler-icon {
-        background-image: url('flecha-arriba.png'); /* Icono de flecha hacia arriba */
-        width: 20px; /* Ajusta el tamaño según tus necesidades */
-        height: 20px;
-    }
     .navbar-brand {
         margin-right: auto;
-        /* Empuja el logotipo a la izquierda */
     }
-    
-    .navbar-nav .nav-link {
-        margin-right: 30px;
-        /* Elimina el margen derecho para los enlaces */
-        margin-bottom: 10px;
-        /* Agrega un margen inferior entre los enlaces */
-    }
-    
-    
-    
-    .navbar-nav .nav-login-link {
-        font-weight: 600;
-        font-size: 12px;
-        color: #fff;
-        margin-right: 10px;
-        transition: transform 0.3s;
-        /* Agregamos una transición para el efecto de zoom */
-        text-decoration: none;
-        padding: 5px 10px;
-        /* Añadimos un padding para dar espacio alrededor del texto */
-        border: 2px solid transparent;
-        /* Establecemos un borde transparente */
-        border-radius: 5px;
-    }
-    
-    /* Estilos para el botón Login y Register cuando el mouse está encima */
-    .navbar-nav .nav-login-link:hover {
-        border-color: #fff;
-        /* Cambiamos el color del borde al pasar el mouse por encima */
-    }
-}
 
+    .navbar-nav .nav-link {
+        margin-right: 15px; /* Reducimos el espacio entre elementos */
+        margin-bottom: 10px;
+    }
 }
