--- a/styles-carrito.css
+++ b/styles-carrito.css
@@ -187,6 +187,7 @@ a:hover {
     max-height: 60px;
     margin: 0;
     padding: 0;
+    
 }
 
 .navbar {
@@ -199,7 +200,8 @@ a:hover {
     max-height: 60px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center !important;
+    flex-wrap: nowrap !important;
 }
 
 img {
@@ -228,6 +230,7 @@ img {
 }
 
 .extrabuttons {
+    
     display: flex;
     margin-right: 35px;
 }
@@ -238,7 +241,7 @@ img {
 }
 
 .navbar-login {
-    min-width: fit-content;
+    min-width: fit-content !important;
     background-color: #573b8a;
     font-weight: 600;
     font-size: 12px;
@@ -275,7 +278,6 @@ img {
         height: 100%;
         width: 100%;
         opacity: 1;
-        margin-top: -15px;
         padding: 3px 20px;
         text-transform: uppercase;
         background-color: #ede0d4 !important;
