--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ html {
     align-items: center;
 }
 
-img {
+.navbar-container .navbar-brand img {
     width: 3.5rem;
 }
 
@@ -106,6 +106,10 @@ img {
 .nav-login-link {
     text-decoration: none;
     color: white;
+}
+.navbar-brand {
+    margin-right: auto;
+        width: 3.5rem;
 }
 
 @media (max-width: 991.98px) {
