--- a/styles-pistolas.css
+++ b/styles-pistolas.css
@@ -1,9 +1,188 @@
 /* Estilos generales */
-* {
-    padding: 0;
+
+body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+    background-size: 100% auto;
+    background-position: top center;
     margin: 0;
-    box-sizing: border-box;
-}   
+    padding: 0;
+}
+
+main {
+    width: 100%;
+    /* Ocupa todo el ancho disponible */
+    
+}
+
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+/* Estilos para agrandar las letras del botón seleccionado 
+.navbar-nav .nav-link:hover {
+    transform: scale(1.3);
+    /* Aumenta la escala del texto */
+/*color: #573b8a;
+    /* Mantenemos el color del texto blanco cuando se pasa el mouse sobre el botón */
+
+/********************NAVARR**********************/
+
+.navbar-container {
+    max-height: 60px;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    width: 100%;
+    opacity: 1;
+    margin: 0;
+    padding: 0px 20px;
+    text-transform: uppercase;
+    background-color: #ede0d4 !important;
+    max-height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-container .navbar-brand img {
+    width: 3.5rem;
+}
+
+.navbar-nav .nav-link {
+    font-weight: bold;
+    letter-spacing: 3px;
+    font-size: 20px;
+    /* Reducimos el tamaño del texto */
+    color: #573b8a  ;
+    position: relative;
+    text-decoration: none;
+    margin-right: 20px;
+    transition: transform 0.3s;
+}
+
+.navbar-nav {
+    padding: 0%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.extrabuttons {
+    display: flex;
+    margin-right: 50px;
+    letter-spacing: 10px;
+}
+
+.extrabuttons a {
+    margin-right: 10px;
+    /* Ajusta el margen entre los iconos */
+}
+
+.navbar-login {
+    min-width: fit-content;
+    background-color: #573b8a;
+    font-weight: 600;
+    font-size: 12px;
+    color: #fff;
+    margin-right: 10px;
+    transition: transform 0.3s;
+    text-decoration: none;
+    padding: 5px 10px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+
+}
+
+.nav-login-link {
+    text-decoration: none;
+    color: white;
+}
+.navbar-brand {
+    margin-right: auto;
+        width: 3.5rem;
+}
+
+/* */
+
+
+
+@media (max-width: 991.98px) {
+    .navbar-collapse {
+        position: absolute;
+        background-color: #ede0d4;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        z-index: 999;
+        align-items: center;
+        border-top: 5px solid;
+    }
+
+    .navbar {
+        min-width: 375px;
+        height: 100%;
+        opacity: 1;
+        padding: 0px 20px;
+        text-transform: uppercase;
+        background-color: #ede0d4 !important;
+        display: flex;
+        align-items: center;
+        --bs-navbar-padding-x: unset !important;
+    --bs-navbar-padding-y: unset !important;
+    }
+    
+
+
+    .navbar-nav {
+        padding: 0%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .navbar-login {
+        min-width: fit-content;
+        background-color: #573b8a;
+        font-weight: 600;
+        font-size: 12px;
+        color: #fff;
+        margin-right: 10px;
+        transition: transform 0.3s;
+        text-decoration: none;
+        padding: 5px 10px;
+        border: 2px solid transparent;
+        border-radius: 5px;
+
+    }
+
+    .navbar-brand {
+        margin-right: auto;
+    }
+
+    .navbar-nav .nav-link {
+        margin-right: 15px;
+        /* Reducimos el espacio entre elementos */
+        margin-bottom: 10px;
+    }
+
+    .extrabuttons {
+        display: flex;
+        margin-right: 0;
+        letter-spacing: normal;
+    }
+}
+
 
 /* Estilos para las tarjetas de producto */
 .card {
@@ -12,11 +191,6 @@
     
 }   
 
-.row {
-    margin-left: -15px;
-    margin-right: -15px;
-    flex-grow: 1;
-}
 .card-header {
     background-color: #004d74; /* Color del navbar */
     color: #fff; /* Color del texto */
@@ -42,6 +216,7 @@
     margin-bottom: 15px; /* Añade un espacio entre la imagen y el contenido */
     background-repeat: no-repeat;
 }
+
 
 .card-title {
     font-size: 24px; /* Ajusta el tamaño del título del producto */
@@ -71,10 +246,5 @@
     color: black !important;
     box-shadow: 2px 2px 25px -7px gray; /* Cambiamos la sombra */
 }
-main {
-    width: 100%; /* Ocupa todo el ancho disponible */
-    max-width: none; /* Elimina el ancho máximo */
-    margin-left: 0; /* Elimina el margen izquierdo */
-    margin-right: 0; /* Elimina el margen derecho */
-}
-    
+
+
