--- a/styles-product.css
+++ b/styles-product.css
@@ -1,180 +1,31 @@
-body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-    background-size: 100% auto;
-    background-position: top center;
-    margin: 0;
-    padding: 0;
-}
-main{
-    width: 100%;
+
+.container {
+    background-: #ede0d4 !important;
 }
 
-html {
-    height: 100%;
-    scroll-behavior: smooth;
-}
-
-
-.title {
-    margin-bottom: 5vh;
-}
-
-.card {
-    margin-top: 120px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px; /* Establece el límite máximo de ancho */
-    width: 100%; /* Permite que el ancho se ajuste dinámicamente */
-    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 1rem;
-    border: transparent;
-}
-
-.cart {
-    background-color: #fff;
-    padding: 4vh 5vh;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 1rem;
-}
-
-.summary {
-    background-color: #ddd;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    padding: 4vh;
-    color: rgb(65, 65, 65);
-}   
-
-.summary .col-2,
-.summary .col-10 {
-    padding: 0;
-}
-
-@media(max-width:767px) {
-    .card {
-        margin-left: 5vh; /* Margen izquierdo pequeño */
-        margin-right: 5vh !important; /* Margen derecho pequeño */
-        width: auto;
-        margin-bottom: 50px;
-    }
-
-    .cart {
-        padding: 2vh; /* Ajusta el relleno interno */
-        border-radius: 10px;
-    }
-
-    .summary {
-        border-radius: 10px;
-    }
-}
-
-.row {
-    margin: 0;
-    max-width: 1200px;
-}
-
-.title b {
-    font-size: 1.5rem;
-}
-
-.col-2,
-.col {
-    padding: 0 1vh;
-    margin-left: 10px;
-}
-
-.close {
-    margin-left: auto;
-    font-size: 0.7rem;
-}
-
-img {
-    width: 3.5rem;
-}
-
-
-
-.text-muted{
+.btn {
+    background-color: black !important;
     color: white !important;
-    --bs-text-opacity: initial !important;
-}
-
-h5 {
-    margin-top: 4vh;
-}
-
-hr {
-    margin-top: 1.25rem;
-}
-
-form {
-    padding: 2vh 0;
-}
-
-select {
-    border: 1px solid rgba(0, 0, 0, 0.137);
-    padding: 1.5vh 1vh;
-    margin-bottom: 4vh;
-    outline: none;
-    width: 100%;
-    background-color: rgb(247, 247, 247);
-}
-
-input {
-    border: 1px solid rgba(0, 0, 0, 0.137);
-    padding: 1vh;
-    margin-bottom: 4vh;
-    outline: none;
-    width: 100%;
-    background-color: rgb(247, 247, 247);
-}
-
-input:focus::-webkit-input-placeholder {
-    color: transparent;
-}
-
-.boton-pagar {
-    margin-top: 4.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1.5em 3.1em;
     border: none;
     border-radius: 7px;
     font-size: 0.8em;
     font-weight: 700;
+    padding: 1.5em 3.1em;
     letter-spacing: 1.3px;
-    color: #fff;
-    background-color: black;
     box-shadow: 2px 2px 25px -7px black;
     cursor: pointer;
-    display: block;
+    transition: background-color 0.3s, color 0.3s; /* Agregamos una transición suave */
 }
 
-.btn:focus {
-    box-shadow: none;
-    outline: none;
-    box-shadow: none;
-    color: white;
-    -webkit-box-shadow: none;
-    transition: none;
-}
 
-.btn:hover {
-    color: white;
-}
-
-a {
-    color: black;
-}
-
-a:hover {
-    color: black;
-    text-decoration: none;
+body {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+    font-size: 0.8rem;
+    font-family: 'Work Sans'
 }
 
 /********************NAVARR**********************/
@@ -309,12 +160,11 @@ a:hover {
         padding: 5px 10px;
         border: 2px solid transparent;
         border-radius: 5px;
-        margin-bottom: 0;
 
     }
 
     .navbar-brand {
-        margin-right: auto;
+        margin-right: auto  ;
     }
 
     .navbar-nav .nav-link {
@@ -328,4 +178,151 @@ a:hover {
         margin-right: 0;
         letter-spacing: normal;
     }
+}
+/********************PRODUCTO*/
+
+.card {
+    max-width: 1250px;
+    width: 100%;
+    padding: 4rem;
+    background-color: rgb(46, 45, 45);
+    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+@media(max-width:768px) {
+    .card {
+        width: 100%;
+        padding: 1.5rem
+    }
+}
+
+.row {
+    margin: 0
+}
+
+.path {
+    color: grey;
+    margin-bottom: 1rem
+}
+
+.path a {
+    color: #ffffff
+}
+
+.info {
+    padding: 6vh 0vh
+}
+
+@media(max-width:768px) {
+    .info {
+        padding: 0
+    }
+}
+
+.checked {
+    color: rgb(255, 217, 0);
+    margin-right: 1vh
+}
+
+.fa-star-half-full {
+    color: rgb(255, 217, 0)
+}
+
+img {
+    height: fit-content;
+    width: 75%;
+}
+
+
+.title .col {
+    padding: 0
+}
+
+.fa-heart-o {
+    font-size: 2rem;
+    color: #ffffffaf;
+    font-weight: lighter
+}
+
+#reviews {
+    margin-left: 3vh;
+    color: grey
+}
+
+.price {
+    color: black;
+    font-size: 2.2em;
+}
+
+.lower {
+    margin-top: 3rem;
+    
+}
+
+.lower i {
+    padding: 2.5vh;
+    margin-right: 1vh;
+    color: grey;
+    border: 1px solid rgb(85, 85, 85)
+}
+
+.lower .col {
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
+}
+
+@media(max-width:768px) {
+    .lower i {
+        padding: 2vh;
+        margin-right: 1vh;
+        color: grey;
+        border: 1px solid rgb(85, 85, 85)
+    }
+}
+
+.btn {
+    background-color: transparent;
+    border-color: rgba(186, 216, 125, 0.863);
+    color: rgba(186, 216, 125, 0.863);
+    padding: 1.8vh 4.5vh;
+    height: fit-content;
+    border-radius: 3px
+}
+
+.btn:focus {
+    box-shadow: none;
+    outline: none;
+    box-shadow: none;
+    color: white;
+    -webkit-box-shadow: none;
+    transition: none
+}
+
+.btn:hover {
+    color: white
+}
+
+@media(max-width:768px) {
+    .btn {
+        background-color: transparent;
+        border-color: rgba(186, 216, 125, 0.863);
+        color: rgba(186, 216, 125, 0.863);
+        padding: 1vh;
+        font-size: 0.9rem;
+        height: fit-content;
+        border-radius: 3px
+    }
+}
+
+a {
+    color: unset
+}
+
+a:hover {
+    color: unset;
+    text-decoration: none
 }
