--- a/styles-login.css
+++ b/styles-login.css
@@ -21,6 +21,7 @@ body{
 	display: none;
 }
 .signup{
+	top: -20px;
 	position: relative;
 	width:100%;
 	height: 100%;
@@ -75,6 +76,7 @@ button:hover{
 	transition: .8s ease-in-out;
 }
 .login label{
+		padding-top: 10px;
 		color: #573b8a;
 		transform: scale(.6);
 		text-align: center;
@@ -109,6 +111,15 @@ button:hover{
   
   .back-btn:hover {
 	background-color: #6d44b8;
+  }
+/* Estilo para cuando el campo es válido */
+input.validatable:valid {
+	border-color: green; /* Cambia el borde a verde */
+  }
+  
+  /* Estilo para cuando el campo es inválido */
+  input.validatable:invalid {
+	border-color: red; /* Cambia el borde a rojo */
   }
 
   
